@@ -1,5 +1,14 @@
 2008-07-07  Christian Neumair  <cneumair@gnome.org>
 
+	* src/file-manager/fm-tree-view.c (got_activation_uri_callback),
+	(button_pressed_callback), (fm_tree_view_activate_file):
+	* src/nautilus-places-sidebar.c (open_selected_bookmark),
+	(bookmarks_button_press_event_cb):
+	Open in new tab on middle-click. Fix middle-click selection
+	interaction.
+
+2008-07-07  Christian Neumair  <cneumair@gnome.org>
+
 	* src/file-manager/fm-list-view.c
 	(activate_selected_items_alternate), (fm_list_view_did_not_drag),
 	(button_press_callback), (key_press_callback),
